{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 211,
  "lineage": "91d83caa-caa5-c473-53ac-d829f73d752e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "web_server_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:loadbalancer/app/web-server-lb/9277865ef00cbdbc",
            "arn_suffix": "app/web-server-lb/9277865ef00cbdbc",
            "dns_name": "web-server-lb-154641087.eu-west-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:loadbalancer/app/web-server-lb/9277865ef00cbdbc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-server-lb",
            "security_groups": [
              "sg-07c3c371815e713fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a1541ec0318e4e36"
              },
              {
                "subnet_id": "subnet-0f4a032a3a3a54d49"
              }
            ],
            "subnets": [
              "subnet-0a1541ec0318e4e36",
              "subnet-0f4a032a3a3a54d49"
            ],
            "vpc_id": "vpc-016e87bb26b43bb9b",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg",
            "aws_subnet.web_srv_sn_1a",
            "aws_subnet.web_srv_sn_1b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "web_srv_lb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:listener/app/web-server-lb/9277865ef00cbdbc/caa832aa865c9555",
            "certificate_arn": "arn:aws:acm:eu-west-1:651390807906:certificate/b9776e07-05f3-47e3-a98c-5a701468ea29",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:targetgroup/web-srv-lb-tg/eb0ea6df0e386711",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:listener/app/web-server-lb/9277865ef00cbdbc/caa832aa865c9555",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:loadbalancer/app/web-server-lb/9277865ef00cbdbc",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb.web_server_lb",
            "aws_alb_target_group.web_srv_tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "web_srv_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:targetgroup/web-srv-lb-tg/eb0ea6df0e386711",
            "arn_suffix": "targetgroup/web-srv-lb-tg/eb0ea6df0e386711",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:targetgroup/web-srv-lb-tg/eb0ea6df0e386711",
            "lambda_multi_value_headers_enabled": false,
            "name": "web-srv-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "web_srv_tg_target",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:targetgroup/web-srv-lb-tg/eb0ea6df0e386711-20190726210657589300000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:651390807906:targetgroup/web-srv-lb-tg/eb0ea6df0e386711",
            "target_id": "i-018e1759703d5780c"
          },
          "depends_on": [
            "aws_alb_target_group.web_srv_tg",
            "aws_instance.web_server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web_server_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.10",
            "association_id": "eipassoc-0bb39dfcb766b980f",
            "domain": "vpc",
            "id": "eipalloc-0315568147afb29f4",
            "instance": "i-018e1759703d5780c",
            "network_interface": "eni-0f1e253b174578363",
            "private_dns": "ip-10-0-0-10.eu-west-1.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-52-209-210-144.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.210.144",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_network_interface.web_server_subnet_interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01b282b0f06ba5fd2",
            "arn": "arn:aws:ec2:eu-west-1:651390807906:instance/i-018e1759703d5780c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "ec2-instance-profile",
            "id": "i-018e1759703d5780c",
            "instance_state": "shutting-down",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws-key-mac",
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f1e253b174578363"
              }
            ],
            "primary_network_interface_id": "eni-0f1e253b174578363",
            "private_dns": "ip-10-0-0-10.eu-west-1.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-52-209-210-144.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.210.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-041bd8f25a3774090",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1541ec0318e4e36",
            "tags": {
              "Name": "web-srv-inst"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-07c3c371815e713fb"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.ec_inst_prf",
            "aws_network_interface.web_server_subnet_interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_srv_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-079b1da666179b17b",
            "owner_id": "651390807906",
            "tags": {
              "Name": "web-srv-gw"
            },
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "web_srv_rtb_asc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3f63dfbd76a5789",
            "original_route_table_id": "rtb-0c578a0c37b206a72",
            "route_table_id": "rtb-008cd159bba18603b",
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_route_table.web_srv_rtb",
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_server_subnet_interface",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-07139e9baa29fc451",
                "device_index": 0,
                "instance": "i-018e1759703d5780c"
              }
            ],
            "id": "eni-0f1e253b174578363",
            "private_dns_name": "ip-10-0-0-10.eu-west-1.compute.internal",
            "private_ip": "10.0.0.10",
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07c3c371815e713fb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1541ec0318e4e36"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg",
            "aws_subnet.web_srv_sn_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_srv_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-079b1da666179b17b",
            "id": "r-rtb-008cd159bba18603b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008cd159bba18603b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.web_srv_gw",
            "aws_route_table.web_srv_rtb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web_srv_rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-008cd159bba18603b",
            "owner_id": "651390807906",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079b1da666179b17b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web-srv-rtb"
            },
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_srv_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:651390807906:security-group/sg-07c3c371815e713fb",
            "description": "Web Server Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c3c371815e713fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-srv-sg",
            "name_prefix": null,
            "owner_id": "651390807906",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-srv-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_srv_inbound_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3265005997",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07c3c371815e713fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_srv_inbound_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3294026350",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07c3c371815e713fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_srv_inbound_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1947620376",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07c3c371815e713fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_srv_outbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2019109308",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07c3c371815e713fb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.web_srv_sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_srv_sn_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:651390807906:subnet/subnet-0a1541ec0318e4e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/18",
            "id": "subnet-0a1541ec0318e4e36",
            "map_public_ip_on_launch": false,
            "owner_id": "651390807906",
            "tags": {
              "Name": "web-srv-sn-a"
            },
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_srv_sn_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:651390807906:subnet/subnet-0f4a032a3a3a54d49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.64.0/18",
            "id": "subnet-0f4a032a3a3a54d49",
            "map_public_ip_on_launch": false,
            "owner_id": "651390807906",
            "tags": {
              "Name": "web-srv-sn-b"
            },
            "vpc_id": "vpc-016e87bb26b43bb9b"
          },
          "depends_on": [
            "aws_vpc.web_srv_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_srv_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:651390807906:vpc/vpc-016e87bb26b43bb9b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00bcb99500894b9a2",
            "default_route_table_id": "rtb-008cd159bba18603b",
            "default_security_group_id": "sg-0b2ba59a4ae89027f",
            "dhcp_options_id": "dopt-03d330d24e9d2bed9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-016e87bb26b43bb9b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-008cd159bba18603b",
            "owner_id": "651390807906",
            "tags": {
              "Name": "web-srv-vpc"
            }
          }
        }
      ]
    }
  ]
}